fixing unreadable popover text

--- a/app/styles/overrides/_overrides.less
+++ b/app/styles/overrides/_overrides.less
@@ -1067,3 +1067,7 @@ a {
 .nav-sidebar>li>a:hover {
   color:#111;
 }
+.popover-content,
+.popover-title{
+  color:#111;
+}
